# pak-gui

./: .gitignore  CMakeLists.txt  CREDITS.md  Messages  Messages.sh  MessagesPreparation  README.md  com.github.juliagoda.pak-gui.desktop  org.juliagoda.pak-gui.desktop  pak-gui.desktop  pak-gui.kdev4
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  cmake-single-platform.yml  cmake.yml  codeql.yml
doc/: .gitignore  CMakeLists.txt  index.docbook
doc/resources/: CMakeLists.txt  pak-gui.qrc
doc/resources/translations/: pak-qt_czn.ts  pak-qt_es.ts  pak-qt_pl.ts  pak-qt_ua.ts
doc/src/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindowview.cpp  mainwindowview.ui  pakGuiSettings.kcfg  pakGuiSettings.kcfgc
doc/tests/: CMakeLists.txt
resources/: CMakeLists.txt  pak-gui.qrc
resources/icons/app/: sc-apps-pak-gui.svgz
resources/translations/: CMakeLists.txt  cs.mo  cs.po  de.mo  de.po  en.mo  en.po  en_US.mo  en_US.po  es.mo  es.po  fr.mo  fr.po  pak-gui.pot  pak-qt_de.ts  pak-qt_fr.ts  pak-qt_it.ts  pak-qt_ja.ts  pak-qt_ru.ts  pak-qt_sk.ts  pl.mo  pl.po  ru.mo  ru.po
src/: CMakeLists.txt  actionsaccesschecker.cpp  actionsaccesschecker.h  availablepackagescolumn.cpp  availablepackagescolumn.h  checkcommandparser.cpp  checkcommandparser.h  checkpackage.cpp  checkpackage.h  choicewindow.cpp  choicewindow.h  choicewindow.ui  commandparser.h  defs.h  downloadcommandparser.cpp  downloadcommandparser.h  generalsettings.ui  installcommandparser.cpp  installedpackagescolumn.cpp  installedpackagescolumn.h  logger.cpp  logger.h  logssettings.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindowview.cpp  mainwindowview.h  mainwindowview.ui  org.example.pak-gui.appdata.xml  outputfilter.cpp  outputfilter.h  package.cpp  package.h  packagedownloader.cpp  packagedownloader.h  packagefromdescription.cpp  packagefromdescription.h  packagefromlist.cpp  packagefromlist.h  (+50 more)
src/src/: actionsaccesschecker.cpp  actionsaccesschecker.h  algorithms.cpp  algorithms.h  appstylesettings.ui  availablepackagescolumn.cpp  availablepackagescolumn.h  checkcommandparser.cpp  checkcommandparser.h  checkpackage.cpp  checkpackage.h  choicewindow.cpp  choicewindow.h  choicewindow.ui  com.github.juliagoda.pak-gui.appdata.xml  commandparser.h  defs.cpp  defs.h  downloadcommandparser.cpp  downloadcommandparser.h  emptycolumnfill.cpp  emptycolumnfill.h  existingfillcolumn.cpp  existingfillcolumn.h  generalsettings.ui  installcommandparser.cpp  installcommandparser.h  installedpackagescolumn.cpp  installedpackagescolumn.h  listwidgetfillstrategy.h  logger.cpp  logger.h  logssettings.ui  mainwindow.cpp  mainwindow.h  mainwindowview.cpp  mainwindowview.h  mainwindowview.ui  mainwindowviewsignals.cpp  mainwindowviewsignals.h  (+68 more)
tests/: CMakeLists.txt  main.cpp  settings.cpp  tests.cpp
tests/gui/: actionsaccesscheckertest.cpp  actionsaccesscheckertest.h  availablepackagescolumn.cpp  availablepackagescolumntest.cpp  availablepackagescolumntest.h  checkcommandparsertest.cpp  checkcommandparsertest.h  checkpackagetest.cpp  checkpackagetest.h  choicewindowtest.cpp  choicewindowtest.h  defstest.cpp  defstest.h  downloadcommandparsertest.cpp  downloadcommandparsertest.h  installcommandparsertest.cpp  installcommandparsertest.h  installedpackagescolumn.cpp  installedpackagescolumntest.cpp  installedpackagescolumntest.h  loggertest.cpp  loggertest.h  main.cpp  mainwindow.cpp  mainwindowtest.cpp  mainwindowtest.h  mainwindowview.cpp  outputfiltertest.cpp  outputfiltertest.h  packagedownloadertest.cpp  packagedownloadertest.h  packageinputwindowtest.cpp  packageinputwindowtest.h  packagescolumnfixtures.h  packagesearchtest.cpp  packagesearchtest.h  packagestoupdatecolumn.cpp  packagestoupdatecolumntest.cpp  packagestoupdatecolumntest.h  pathconvertertest.cpp  (+37 more)
